--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://malgorzatamarkulis.github.io/goit-js-hw-11",
+  "homepage": "https://malgorzatamarkulis.github.io/goit-js-hw-11/",
   "scripts": {
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /goit-js-hw-11/"
@@ -18,8 +18,10 @@
     "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "dependencies": {
-    "axios": "^1.6.2",
     "modern-normalize": "^1.1.0"
+
+        "axios": "^1.6.2",
+
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
